# third_party_wpa_supplicant

./: 185.diff  README.OpenSource  bundle.json
wpa_supplicant-2.9/: .gitignore  BUILD.gn  build.sh  hostapd.conf  wpa_supplicant.conf
wpa_supplicant-2.9/build_so/: Makefile
wpa_supplicant-2.9/hostapd/: .config  COPYRIGHT.OpenSource  Makefile  main.c
wpa_supplicant-2.9/os_dep/include/: message_config.h  message_dispatcher.h  message_router.h  message_types.h  sidecar.h
wpa_supplicant-2.9/src/common/: sae.c  wpa_ctrl.c
wpa_supplicant-2.9/src/drivers/: driver.h  driver_hisi.c  driver_hisi.h  driver_hisi_ioctl.c  driver_hisi_ioctl.h  driver_nl80211.c  driver_nl80211.h  driver_nl80211_capa.c  drivers.c  drivers.mak  drivers.mk  wpa_hal.c  wpa_hal.h  wpa_hal_cmd.c  wpa_hal_cmd.h  wpa_hal_event.c  wpa_hal_event.h  wpa_hal_service.c  wpa_hal_service.h  wpa_msg_service.c  wpa_msg_service.h
wpa_supplicant-2.9/src/l2_packet/: l2_packet_linux.c  l2_packet_rtos.c
wpa_supplicant-2.9/src/p2p/: p2p.c  p2p_parse.c
wpa_supplicant-2.9/src/radius/: radius_client.c
wpa_supplicant-2.9/src/tls/: pkcs1.c
wpa_supplicant-2.9/src/utils/: common.h  eloop.c  os_internal.c  os_unix.c  wpa_debug.c  wpa_debug.h
wpa_supplicant-2.9/wpa_supplicant/: .config  COPYRIGHT.OpenSource  Makefile  README.OpenSource  bss.h  ctrl_iface.c  ctrl_iface.h  ctrl_iface_udp.c  driver_i.h  main.c  p2p_supplicant.c  p2p_supplicant.h  wpa_supplicant.c  wpa_supplicant_i.h  wpas_glue.c
wpa_supplicant-2.9/wpa_supplicant_lib/: driver_nl80211_hisi.c  driver_nl80211_hisi.h  wpa_magiclink.c  wpa_magiclink.h
wpa_supplicant-2.9_standard/: .gitignore  BUILD.gn  CMakeLists.txt  CONTRIBUTIONS  build.sh  bundle.json  libwpa.map.txt  ohos.build  wpa.gni  wpa_blocklist.txt  wpa_vendor_ext.gni
wpa_supplicant-2.9_standard/hostapd/: Android.mk  Makefile  README.OpenSource  android.config  ap_config_file.c  ap_ctrl_iface.c  ap_ctrl_iface.h  ap_main.c  hlr_auc_gw.c  sae_pk_gen.c
wpa_supplicant-2.9_standard/hostapd_test/: hostapd_sample.c
wpa_supplicant-2.9_standard/hs20/client/: Makefile  osu_client.c
wpa_supplicant-2.9_standard/script/: check_path.py  get_files.py
wpa_supplicant-2.9_standard/src/ap/: accounting.c  ap_config.c  ap_config.h  ap_drv_ops.c  ap_drv_ops.h  ap_list.c  ap_mlme.c  ap_rrm.c  authsrv.c  beacon.c  comeback_token.c  ctrl_iface_ap.c  dfs.c  dhcp_snoop.c  dpp_hostapd.c  drv_callbacks.c  fils_hlp.c  gas_query_ap.c  gas_serv.c  hostapd.c  hs20.c  hw_features.c  ieee802_11.c  ieee802_11.h  ieee802_11_auth.c  ieee802_11_eht.c  ieee802_11_he.c  ieee802_11_ht.c  ieee802_11_shared.c  ieee802_1x.c  mbo_ap.c  ndisc_snoop.c  pmksa_cache_auth.c  preauth_auth.c  rrm.c  sta_info.c  sta_info.h  tkip_countermeasures.c  utils.c  wmm.c  (+9 more)
wpa_supplicant-2.9_standard/src/common/: common_module_tests.c  defs.h  dpp.c  dpp_auth.c  dpp_crypto.c  dpp_pkex.c  dpp_tcp.c  gas_server.c  hw_features_common.c  ieee802_11_common.c  ieee802_11_common.h  ieee802_11_defs.h  ptksa_cache.c  sae.c  sae.h  wpa_common.c  wpa_common.h  wpa_ctrl.c  wpa_ctrl.h  wpa_helpers.c
wpa_supplicant-2.9_standard/src/crypto/: crypto.h  crypto_openssl.c  crypto_wolfssl.c  random.c  sha1-pbkdf2.c  tls.h  tls_openssl.c
wpa_supplicant-2.9_standard/src/drivers/: driver.h  driver_atheros.c  driver_bsd.c  driver_common.c  driver_macsec_linux.c  driver_ndis.c  driver_nl80211.c  driver_nl80211.h  driver_nl80211_capa.c  driver_nl80211_event.c  driver_nl80211_scan.c  driver_privsep.c  driver_wext.c  driver_wired.c  drivers.mak  drivers.mk  netlink.c  nl80211_copy.h  rfkill.c  wpa_hal.c  wpa_hal.h  wpa_hal_cmd.c  wpa_hal_event.c  wpa_hal_event.h
wpa_supplicant-2.9_standard/src/eap_common/: eap_sim_common.c  eap_sim_common.h  ext_authentication.c  ext_authentication.h
wpa_supplicant-2.9_standard/src/eap_peer/: eap.c  eap.h  eap_config.h  eap_peap.c  eap_ttls.c  eap_wsc.c  ext_auth_eap_peap.h
wpa_supplicant-2.9_standard/src/eap_server/: eap_server.c  eap_server_fast.c  eap_server_ikev2.c  eap_server_methods.c  eap_server_teap.c  eap_server_wsc.c
wpa_supplicant-2.9_standard/src/eapol_auth/: eapol_auth_sm.c
wpa_supplicant-2.9_standard/src/eapol_supp/: eapol_supp_sm.c  eapol_supp_sm.h
wpa_supplicant-2.9_standard/src/fst/: fst.c  fst_ctrl_iface.c  fst_group.c  fst_session.c
wpa_supplicant-2.9_standard/src/l2_packet/: l2_packet.h  l2_packet_linux.c  l2_packet_rtos.c
wpa_supplicant-2.9_standard/src/p2p/: Makefile  p2p.c  p2p.h  p2p_build.c  p2p_dev_disc.c  p2p_go_neg.c  p2p_group.c  p2p_i.h  p2p_invitation.c  p2p_parse.c  p2p_pd.c  p2p_sd.c  p2p_utils.c
wpa_supplicant-2.9_standard/src/pae/: ieee802_1x_kay.c
wpa_supplicant-2.9_standard/src/pasn/: pasn_initiator.c  pasn_responder.c
wpa_supplicant-2.9_standard/src/radius/: radius_client.c  radius_server.c
wpa_supplicant-2.9_standard/src/rsn_supp/: pmksa_cache.c  preauth.c  tdls.c  wpa.c  wpa.h  wpa_ft.c  wpa_i.h  wpa_ie.c
wpa_supplicant-2.9_standard/src/tls/: pkcs1.c  x509v3.c
wpa_supplicant-2.9_standard/src/utils/: common.c  common.h  eloop.c  eloop.h  http_curl.c  ip_addr.h  os.h  os_internal.c  os_unix.c  state_machine.h  utils_module_tests.c  wpa_debug.c  wpa_debug.h
wpa_supplicant-2.9_standard/src/vendor_ext/: vendor_ext.c  vendor_ext.h
wpa_supplicant-2.9_standard/src/wps/: wps.c  wps.h  wps_attr_build.c  wps_attr_process.c  wps_er.c  (+7 more)
wpa_supplicant-2.9_standard/wpa_supplicant/: .config  Android.mk  Makefile  README.OpenSource  android.config  ap.c  bgscan_learn.c  bss.c  bss.h  bssid_ignore.c  config.c  config.h  config_file.c  config_ssid.h  ctrl_iface.c  ctrl_iface.h  ctrl_iface_udp.c  ctrl_iface_unix.c  dpp_supplicant.c  driver_i.h  eapol_test.c  events.c  gas_query.c  hs20_supplicant.c  ibss_rsn.c  interworking.c  main.c  mbo.c  mesh.c  mesh_mpm.c  mesh_rsn.c  notify.c  notify.h  offchannel.c  p2p_supplicant.c  p2p_supplicant.h  p2p_supplicant_sd.c  pasn_supplicant.c  robust_av.c  rrm.c  (+13 more)
wpa_supplicant-2.9_standard/wpa_supplicant_lib/: driver_nl80211_hisi.c  driver_nl80211_hisi.h  wpa_evp_key.c  wpa_evp_key.h  wpa_magiclink.c
wpa_supplicant-2.9_standard/wpa_test/: wpa_sample.c
(+25 files in other folders)
