# Copyright (c) Huawei Technologies Co., Ltd. 2020. All rights reserved.

import("//build/lite/config/component/lite_component.gni")
import("//build/lite/ndk/ndk.gni")

build_ext_component("wpa_supplicant-2.9") {
  clang_dir = "//"
  if (ohos_build_compiler_dir != "") {
    clang_dir = rebase_path("${ohos_build_compiler_dir}")
  }
  outdir = rebase_path("$root_out_dir")
  sysroot_path = rebase_path(ohos_current_sysroot)
  arch_cflags = string_join(" ", target_arch_cflags)
  arch_cflags += " --target=$target_triple"
  command = "sh build.sh ${outdir} ${ohos_build_compiler} ${ohos_build_ndk} ${ohos_build_type} ${clang_dir} ${ohos_kernel_type} ${sysroot_path} \"${arch_cflags}\""
  exec_path = rebase_path(".", root_build_dir)
  deps = [ "//drivers/peripheral/wlan/client:wifi_driver_client" ]
}

lite_component("wpa_supplicant") {
  deps = [ ":wpa_supplicant-2.9" ]
  features = []
}
