#Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

FWK_ROOT_DIR = "//drivers/framework"
WPA_ROOT_DIR = "//third_party/wpa_supplicant/wpa_supplicant-2.9_standard"

CONFIG_OS = "unix"
CONFIG_ELOOP = "eloop"
CONFIG_L2_PACKET = "rtos"
CONFIG_CTRL_IFACE = "udp"
CONFIG_MAIN = "main"

config("wpa_warnings") {
  cflags = [ "-Wno-error=sign-compare" ]
}

ohos_shared_library("wpa_client") {
  output_name = "wpa_client"
  sources = [
    "$WPA_ROOT_DIR/src/common/wpa_ctrl.c",
    "$WPA_ROOT_DIR/src/utils/common.c",
    "$WPA_ROOT_DIR/src/utils/os_${CONFIG_OS}.c",
    "$WPA_ROOT_DIR/src/utils/wpa_debug.c",
  ]

  include_dirs = [
    "$WPA_ROOT_DIR/src",
    "$WPA_ROOT_DIR/src/utils",
    "$WPA_ROOT_DIR/src/drivers",
    "$WPA_ROOT_DIR/wpa_supplicant",
    "$WPA_ROOT_DIR/build/include",
    "$FWK_ROOT_DIR/include",
    "$FWK_ROOT_DIR/include/utils",
    "$FWK_ROOT_DIR/utils/include",
    "$FWK_ROOT_DIR/include/osal",
    "$FWK_ROOT_DIR/ability/sbuf/include",
    "$FWK_ROOT_DIR/core/shared/include",
    "$FWK_ROOT_DIR/include/core",
    "$FWK_ROOT_DIR/core/adapter/syscall/include",
    "//drivers/adapter/uhdf/posix/include",
    "//drivers/adapter/uhdf2/osal/include",
    "//drivers/peripheral/wlan/client/include",
    "//third_party/bounds_checking_function/include",
  ]

  cflags = [
    "-UANDROID",
    "-fsigned-char",
    "-DCONFIG_DRIVER_HDF",
    "-DCONFIG_IEEE80211W",
    "-DCONFIG_NO_VLAN",
    "-DCONFIG_NO_RADIUS",
    "-DCONFIG_NO_RANDOM_POOL",
    "-DCONFIG_SHA256",
    "-DCONFIG_CRYPTO_INTERNAL",
    "-DCONFIG_INTERNAL_LIBTOMMATH",
    "-DCONFIG_INTERNAL_SHA384",
    "-DCONFIG_INTERNAL_SHA512",
    "-DCONFIG_CTRL_IFACE",
    "-DCONFIG_CTRL_IFACE_UDP",
    "-DCONFIG_CTRL_IFACE_UDP_REMOTE",
    "-DCONFIG_IBSS_RSN",
    "-DIEEE8021X_EAPOL",
    "-DCONFIG_BACEND_FILE",
    "-DCONFIG_NO_CONFIG_WRITE",
    "-DCONFIG_NO_CONFIG_BLOBS",
    "-DUSERSPACE_CLIENT_SUPPORT",
  ]

  part_name = "wpa_supplicant-2.9"
  subsystem_name = "wpa_supplicant-2.9"
}

ohos_shared_library("wpa") {
  output_name = "wpa"
  sources = [
    # wpa & hostapd
    "$WPA_ROOT_DIR/hostapd/ap_config_file.c",
    "$WPA_ROOT_DIR/hostapd/ap_ctrl_iface.c",
    "$WPA_ROOT_DIR/hostapd/ap_eap_register.c",

    # hostapd
    "$WPA_ROOT_DIR/hostapd/ap_main.c",
    "$WPA_ROOT_DIR/src/ap/ap_config.c",
    "$WPA_ROOT_DIR/src/ap/ap_drv_ops.c",
    "$WPA_ROOT_DIR/src/ap/ap_list.c",
    "$WPA_ROOT_DIR/src/ap/ap_mlme.c",
    "$WPA_ROOT_DIR/src/ap/ap_rrm.c",
    "$WPA_ROOT_DIR/src/ap/authsrv.c",
    "$WPA_ROOT_DIR/src/ap/beacon.c",
    "$WPA_ROOT_DIR/src/ap/bss_load.c",
    "$WPA_ROOT_DIR/src/ap/ctrl_iface_ap.c",
    "$WPA_ROOT_DIR/src/ap/dfs.c",
    "$WPA_ROOT_DIR/src/ap/drv_callbacks.c",
    "$WPA_ROOT_DIR/src/ap/eap_user_db.c",
    "$WPA_ROOT_DIR/src/ap/hostapd.c",
    "$WPA_ROOT_DIR/src/ap/hw_features.c",
    "$WPA_ROOT_DIR/src/ap/ieee802_11.c",
    "$WPA_ROOT_DIR/src/ap/ieee802_11_auth.c",
    "$WPA_ROOT_DIR/src/ap/ieee802_11_ht.c",
    "$WPA_ROOT_DIR/src/ap/ieee802_11_shared.c",
    "$WPA_ROOT_DIR/src/ap/ieee802_1x.c",
    "$WPA_ROOT_DIR/src/ap/neighbor_db.c",
    "$WPA_ROOT_DIR/src/ap/pmksa_cache_auth.c",
    "$WPA_ROOT_DIR/src/ap/preauth_auth.c",
    "$WPA_ROOT_DIR/src/ap/sta_info.c",
    "$WPA_ROOT_DIR/src/ap/tkip_countermeasures.c",
    "$WPA_ROOT_DIR/src/ap/utils.c",
    "$WPA_ROOT_DIR/src/ap/wmm.c",
    "$WPA_ROOT_DIR/src/ap/wpa_auth.c",
    "$WPA_ROOT_DIR/src/ap/wpa_auth_glue.c",
    "$WPA_ROOT_DIR/src/ap/wpa_auth_ie.c",
    "$WPA_ROOT_DIR/src/common/ctrl_iface_common.c",
    "$WPA_ROOT_DIR/src/common/hw_features_common.c",
    "$WPA_ROOT_DIR/src/common/ieee802_11_common.c",
    "$WPA_ROOT_DIR/src/common/wpa_common.c",
    "$WPA_ROOT_DIR/src/crypto/aes-internal-dec.c",
    "$WPA_ROOT_DIR/src/crypto/aes-internal-enc.c",
    "$WPA_ROOT_DIR/src/crypto/aes-internal.c",
    "$WPA_ROOT_DIR/src/crypto/aes-omac1.c",
    "$WPA_ROOT_DIR/src/crypto/aes-unwrap.c",
    "$WPA_ROOT_DIR/src/crypto/aes-wrap.c",
    "$WPA_ROOT_DIR/src/crypto/crypto_internal.c",
    "$WPA_ROOT_DIR/src/crypto/md5-internal.c",
    "$WPA_ROOT_DIR/src/crypto/md5.c",
    "$WPA_ROOT_DIR/src/crypto/rc4.c",
    "$WPA_ROOT_DIR/src/crypto/sha1-internal.c",
    "$WPA_ROOT_DIR/src/crypto/sha1-pbkdf2.c",
    "$WPA_ROOT_DIR/src/crypto/sha1-prf.c",
    "$WPA_ROOT_DIR/src/crypto/sha1.c",
    "$WPA_ROOT_DIR/src/crypto/sha256-internal.c",
    "$WPA_ROOT_DIR/src/crypto/sha256-prf.c",
    "$WPA_ROOT_DIR/src/crypto/sha256.c",
    "$WPA_ROOT_DIR/src/crypto/sha384-internal.c",
    "$WPA_ROOT_DIR/src/crypto/sha512-internal.c",
    "$WPA_ROOT_DIR/src/crypto/tls_none.c",
    "$WPA_ROOT_DIR/src/drivers/driver_common.c",
    "$WPA_ROOT_DIR/src/drivers/drivers.c",
    "$WPA_ROOT_DIR/src/drivers/wpa_hal.c",
    "$WPA_ROOT_DIR/src/drivers/wpa_hal_event.c",
    "$WPA_ROOT_DIR/src/eap_common/eap_common.c",
    "$WPA_ROOT_DIR/src/eap_peer/eap.c",
    "$WPA_ROOT_DIR/src/eap_peer/eap_methods.c",
    "$WPA_ROOT_DIR/src/eap_server/eap_server.c",
    "$WPA_ROOT_DIR/src/eap_server/eap_server_identity.c",
    "$WPA_ROOT_DIR/src/eap_server/eap_server_methods.c",
    "$WPA_ROOT_DIR/src/eapol_auth/eapol_auth_sm.c",
    "$WPA_ROOT_DIR/src/eapol_supp/eapol_supp_sm.c",
    "$WPA_ROOT_DIR/src/l2_packet/l2_packet_${CONFIG_L2_PACKET}.c",
    "$WPA_ROOT_DIR/src/rsn_supp/pmksa_cache.c",
    "$WPA_ROOT_DIR/src/rsn_supp/preauth.c",
    "$WPA_ROOT_DIR/src/rsn_supp/wpa.c",
    "$WPA_ROOT_DIR/src/rsn_supp/wpa_ie.c",
    "$WPA_ROOT_DIR/src/utils/${CONFIG_ELOOP}.c",
    "$WPA_ROOT_DIR/src/utils/bitfield.c",
    "$WPA_ROOT_DIR/src/utils/common.c",
    "$WPA_ROOT_DIR/src/utils/ip_addr.c",
    "$WPA_ROOT_DIR/src/utils/os_${CONFIG_OS}.c",
    "$WPA_ROOT_DIR/src/utils/wpa_debug.c",
    "$WPA_ROOT_DIR/src/utils/wpabuf.c",
    "$WPA_ROOT_DIR/wpa_supplicant/${CONFIG_MAIN}.c",
    "$WPA_ROOT_DIR/wpa_supplicant/blacklist.c",
    "$WPA_ROOT_DIR/wpa_supplicant/bss.c",

    # wpa_supplicant
    "$WPA_ROOT_DIR/wpa_supplicant/config.c",
    "$WPA_ROOT_DIR/wpa_supplicant/config_file.c",
    "$WPA_ROOT_DIR/wpa_supplicant/ctrl_iface.c",
    "$WPA_ROOT_DIR/wpa_supplicant/ctrl_iface_${CONFIG_CTRL_IFACE}.c",
    "$WPA_ROOT_DIR/wpa_supplicant/eap_register.c",
    "$WPA_ROOT_DIR/wpa_supplicant/events.c",
    "$WPA_ROOT_DIR/wpa_supplicant/ibss_rsn.c",
    "$WPA_ROOT_DIR/wpa_supplicant/notify.c",
    "$WPA_ROOT_DIR/wpa_supplicant/op_classes.c",
    "$WPA_ROOT_DIR/wpa_supplicant/rrm.c",
    "$WPA_ROOT_DIR/wpa_supplicant/scan.c",
    "$WPA_ROOT_DIR/wpa_supplicant/wmm_ac.c",
    "$WPA_ROOT_DIR/wpa_supplicant/wpa_supplicant.c",
    "$WPA_ROOT_DIR/wpa_supplicant/wpas_glue.c",

    #p2p
    "$WPA_ROOT_DIR/src/ap/p2p_hostapd.c",
    "$WPA_ROOT_DIR/src/ap/wps_hostapd.c",
    "$WPA_ROOT_DIR/src/common/gas.c",
    "$WPA_ROOT_DIR/src/crypto/aes-cbc.c",
    "$WPA_ROOT_DIR/src/crypto/crypto_internal-modexp.c",
    "$WPA_ROOT_DIR/src/crypto/dh_group5.c",
    "$WPA_ROOT_DIR/src/crypto/dh_groups.c",
    "$WPA_ROOT_DIR/src/eap_common/eap_wsc_common.c",
    "$WPA_ROOT_DIR/src/eap_peer/eap_wsc.c",
    "$WPA_ROOT_DIR/src/eap_server/eap_server_wsc.c",
    "$WPA_ROOT_DIR/src/p2p/p2p.c",
    "$WPA_ROOT_DIR/src/p2p/p2p_build.c",
    "$WPA_ROOT_DIR/src/p2p/p2p_dev_disc.c",
    "$WPA_ROOT_DIR/src/p2p/p2p_go_neg.c",
    "$WPA_ROOT_DIR/src/p2p/p2p_group.c",
    "$WPA_ROOT_DIR/src/p2p/p2p_invitation.c",
    "$WPA_ROOT_DIR/src/p2p/p2p_parse.c",
    "$WPA_ROOT_DIR/src/p2p/p2p_pd.c",
    "$WPA_ROOT_DIR/src/p2p/p2p_sd.c",
    "$WPA_ROOT_DIR/src/p2p/p2p_utils.c",
    "$WPA_ROOT_DIR/src/tls/bignum.c",
    "$WPA_ROOT_DIR/src/utils/base64.c",
    "$WPA_ROOT_DIR/src/utils/uuid.c",
    "$WPA_ROOT_DIR/src/wps/wps.c",
    "$WPA_ROOT_DIR/src/wps/wps_attr_build.c",
    "$WPA_ROOT_DIR/src/wps/wps_attr_parse.c",
    "$WPA_ROOT_DIR/src/wps/wps_attr_process.c",
    "$WPA_ROOT_DIR/src/wps/wps_common.c",
    "$WPA_ROOT_DIR/src/wps/wps_dev_attr.c",
    "$WPA_ROOT_DIR/src/wps/wps_enrollee.c",
    "$WPA_ROOT_DIR/src/wps/wps_registrar.c",
    "$WPA_ROOT_DIR/wpa_supplicant/ap.c",
    "$WPA_ROOT_DIR/wpa_supplicant/gas_query.c",
    "$WPA_ROOT_DIR/wpa_supplicant/offchannel.c",
    "$WPA_ROOT_DIR/wpa_supplicant/p2p_supplicant.c",
    "$WPA_ROOT_DIR/wpa_supplicant/p2p_supplicant_sd.c",
    "$WPA_ROOT_DIR/wpa_supplicant/wps_supplicant.c",
  ]

  include_dirs = [
    "$WPA_ROOT_DIR/src",
    "$WPA_ROOT_DIR/src/utils",
    "$WPA_ROOT_DIR/src/drivers",
    "$WPA_ROOT_DIR/wpa_supplicant",
    "$WPA_ROOT_DIR/build/include",
    "$FWK_ROOT_DIR/include",
    "$FWK_ROOT_DIR/include/utils",
    "$FWK_ROOT_DIR/utils/include",
    "$FWK_ROOT_DIR/include/osal",
    "$FWK_ROOT_DIR/ability/sbuf/include",
    "$FWK_ROOT_DIR/core/shared/include",
    "$FWK_ROOT_DIR/include/core",
    "$FWK_ROOT_DIR/core/adapter/syscall/include",
    "//drivers/adapter/uhdf/posix/include",
    "//drivers/adapter/uhdf2/osal/include",
    "//drivers/peripheral/wlan/client/include",
    "//third_party/bounds_checking_function/include",
  ]

  cflags = [
    "-UANDROID",
    "-fsigned-char",
    "-DCONFIG_DRIVER_HDF",
    "-DCONFIG_IEEE80211W",
    "-DCONFIG_NO_VLAN",
    "-DCONFIG_NO_RADIUS",
    "-DCONFIG_NO_RANDOM_POOL",
    "-DCONFIG_SHA256",
    "-DCONFIG_CRYPTO_INTERNAL",
    "-DCONFIG_INTERNAL_LIBTOMMATH",
    "-DCONFIG_INTERNAL_SHA384",
    "-DCONFIG_INTERNAL_SHA512",
    "-DCONFIG_CTRL_IFACE",
    "-DCONFIG_CTRL_IFACE_UDP",
    "-DCONFIG_CTRL_IFACE_UDP_REMOTE",
    "-DCONFIG_IBSS_RSN",
    "-DIEEE8021X_EAPOL",
    "-DUSERSPACE_CLIENT_SUPPORT",
    "-DCONFIG_BACKEND_FILE",
    "-DCONFIG_NO_CONFIG_WRITE",
    "-DCONFIG_NO_CONFIG_BLOBS",
    "-DCONFIG_NO_RC4",
    "-DCONFIG_NO_ACCOUNTING",
    "-DEAP_SERVER_IDENTITY",
    "-DCONFIG_IEEE80211N",
    "-DHOSTAPD",
    "-DNEED_AP_MLME",
    "-DCONFIG_OHOS_P2P",
    "-DCONFIG_WPS",
    "-DCONFIG_AP",
    "-DCONFIG_P2P",
    "-DEAP_WSC",
    "-DEAP_SERVER_WSC",
    "-DEAP_SERVER",
    "-DCONFIG_GAS",
    "-DCONFIG_OFFCHANNEL",
  ]

  deps = [
    "//drivers/adapter/uhdf2/manager:hdf_devmgr",
    "//drivers/adapter/uhdf2/osal:libhdf_utils",
    "//drivers/peripheral/wlan/client:wifi_driver_client",
    "//third_party/bounds_checking_function:libsec_static",
  ]

  configs = [ ":wpa_warnings" ]
  part_name = "wpa_supplicant-2.9"
  subsystem_name = "wpa_supplicant-2.9"
}

ohos_executable("wpa_cli") {
  sources = [
    "$WPA_ROOT_DIR/src/common/cli.c",
    "$WPA_ROOT_DIR/src/common/wpa_ctrl.c",
    "$WPA_ROOT_DIR/src/utils/${CONFIG_ELOOP}.c",
    "$WPA_ROOT_DIR/src/utils/common.c",
    "$WPA_ROOT_DIR/src/utils/edit_simple.c",
    "$WPA_ROOT_DIR/src/utils/os_${CONFIG_OS}.c",
    "$WPA_ROOT_DIR/src/utils/wpa_debug.c",
    "$WPA_ROOT_DIR/wpa_supplicant/wpa_cli.c",
  ]

  include_dirs = [
    "$WPA_ROOT_DIR/src",
    "$WPA_ROOT_DIR/src/utils",
    "$WPA_ROOT_DIR/src/drivers",
    "$WPA_ROOT_DIR/wpa_supplicant",
    "$WPA_ROOT_DIR/build/include",
  ]

  cflags = [
    "-UANDROID",
    "-fsigned-char",
    "-DCONFIG_DRIVER_HDF",
    "-DCONFIG_IEEE80211W",
    "-DCONFIG_NO_VLAN",
    "-DCONFIG_NO_RADIUS",
    "-DCONFIG_NO_RANDOM_POOL",
    "-DCONFIG_SHA256",
    "-DCONFIG_CRYPTO_INTERNAL",
    "-DCONFIG_INTERNAL_LIBTOMMATH",
    "-DCONFIG_INTERNAL_SHA384",
    "-DCONFIG_INTERNAL_SHA512",
    "-DCONFIG_CTRL_IFACE",
    "-DCONFIG_CTRL_IFACE_UDP",
    "-DCONFIG_IBSS_RSN",
    "-DIEEE8021X_EAPOL",
    "-DUSERSPACE_CLIENT_SUPPORT",
    "-DCONFIG_BACKEND_FILE",
    "-DCONFIG_NO_CONFIG_WRITE",
    "-DCONFIG_NO_CONFIG_BLOBS",
    "-DCONFIG_OHOS_P2P",
    "-DCONFIG_WPS",
    "-DCONFIG_AP",
    "-DCONFIG_P2P",
    "-DEAP_WSC",
    "-DEAP_SERVER_WSC",
    "-DEAP_SERVER",
    "-DCONFIG_GAS",
    "-DCONFIG_OFFCHANNEL",
  ]

  part_name = "wpa_supplicant-2.9"
  subsystem_name = "wpa_supplicant-2.9"
}

ohos_executable("wpa_supplicant") {
  sources = [ "$WPA_ROOT_DIR/wpa_test/wpa_sample.c" ]

  include_dirs = [ "$WPA_ROOT_DIR/build/include" ]

  deps = [ "//third_party/wpa_supplicant/wpa_supplicant-2.9_standard:wpa" ]

  part_name = "wpa_supplicant-2.9"
  subsystem_name = "wpa_supplicant-2.9"
}

ohos_executable("hostapd") {
  sources = [ "$WPA_ROOT_DIR/hostapd_test/hostapd_sample.c" ]

  include_dirs = [ "$WPA_ROOT_DIR/build/include" ]

  deps = [ "//third_party/wpa_supplicant/wpa_supplicant-2.9_standard:wpa" ]

  part_name = "wpa_supplicant-2.9"
  subsystem_name = "wpa_supplicant-2.9"
}
